hphp/test/quick/typehint_callable.php.expectf
bool(true)

Fatal error: Argument 1 passed to a() must be an instance of callable, string given in %s on line 3
